# fun-with-monorepos

./: .gitignore  BUILD.bazel  CHANGELOG.md  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
.github/scripts/: release.sh
.github/workflows/: actions.yml  golanglint-ci.yml  pull_request.yml  release-please.yml  release.yml
apps/greet/: BUILD.bazel  greet.go
apps/numbers/: BUILD.bazel  main.go
apps/ping/: BUILD.bazel  main.go
math/: BUILD.bazel  factorial.go  factorial_test.go  prime.go  prime_test.go
proto/greet/v1/: BUILD.bazel  greet.proto
