load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "math",
    srcs = ["factorial.go"],
    importpath = "github.com/mholtzscher/fun-with-monorepos/math",
    visibility = ["//visibility:public"],
)

go_test(
    name = "math_test",
    srcs = ["factorial_test.go"],
    embed = [":math"],
)
