load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "numbers_lib",
    srcs = ["main.go"],
    importpath = "github.com/mholtzscher/fun-with-monorepos/apps/numbers",
    visibility = ["//visibility:private"],
    deps = [
        "//math",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)

go_binary(
    name = "numbers",
    embed = [":numbers_lib"],
    visibility = ["//visibility:public"],
)
