load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "numbers_lib",
    srcs = ["main.go"],
    importpath = "github.com/mholtzscher/fun-with-monorepos/apps/numbers",
    visibility = ["//visibility:private"],
    deps = [
        "//math",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)

go_image(
    name = "numbers",
    embed = [":numbers_lib"],
    goarch = "arm64",
    goos = "linux",
    pure = "on",
)

container_push(
    name = "release-latest",
    format = "Docker",
    image = ":numbers",
    registry = "ghcr.io",
    repository = "mholtzscher/fun-with-monorepos/numbers",
    tag = "latest",
)

container_push(
    name = "release",
    format = "Docker",
    image = ":numbers",
    registry = "ghcr.io",
    repository = "mholtzscher/fun-with-monorepos/numbers",
    tag = "{GITHUB_SHA}",
)