load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ping_lib",
    srcs = ["main.go"],
    importpath = "github.com/mholtzscher/fun-with-monorepos/apps/ping",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:go_default_library"],
)

go_binary(
    name = "ping",
    embed = [":ping_lib"],
    visibility = ["//visibility:public"],
)
